--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "devDependencies": {
     "copyfiles": "2.4.1",
     "del-cli": "4.0.1"
+  },
+  "dependencies": {
+    "@types/chrome": "^0.0.178"
   }
 }
