--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,7 +17,9 @@
             "32": "assets/icon-32x32.png",
             "48": "assets/icon-48x48.png",
             "128": "assets/icon-128x128.png"
-        }
+        },
+        "default_popup": "index.html",
+        "default_title": "Blockcore Extension"
     },
     "web_accessible_resources": [
         {
